Atualização das tabelas

--- a/codigos/01-load-data.ipynb
+++ b/codigos/01-load-data.ipynb
@@ -403,6 +403,19 @@
     "leituras.to_sql('leituras', schema='pesquisa', con=conn, if_exists='replace', index=False)\n",
     "localizacao.to_postgis('localizacao', schema='pesquisa', con=conn, if_exists='replace', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensores.to_excel('../tabelas/sensores.xlsx')\n",
+    "unidades.to_excel('../tabelas/unidades.xlsx')\n",
+    "direcao_saida.to_excel('../tabelas/direcao_saida.xlsx')\n",
+    "leituras.to_excel('../tabelas/leituras.xlsx')\n",
+    "localizacao.to_excel('../tabelas/localizacao.xlsx')"
+   ]
   }
  ],
  "metadata": {
